@@ -549,7 +549,7 @@ if (defined('PHLICKR_SUPPORT') && PHLICKR_SUPPORT === true)
 				!empty ($_REQUEST[$name]) ? $this->setDisplayTags(true) : $this->setDisplayTags(false);
 				$name = "flickr_photostream_".$this->id."_display_description";
 				!empty ($_REQUEST[$name]) ? $this->setDisplayDescription(true) : $this->setDisplayDescription(false);
-				
+
 				if ($generator->isPresent("PreferredSize".$this->getID(), "FlickrPhotostream"))
 					$this->setPreferredSize($generator->getResult("PreferredSize".$this->getID(), "FlickrPhotostream"));
 			}
@@ -603,11 +603,17 @@ if (defined('PHLICKR_SUPPORT') && PHLICKR_SUPPORT === true)
 					{
 						$html .= '<div class="flickr_photo_block">'."\n";
 						if ($this->shouldDisplayTitle())
-							$html .= '<div class="flickr_title"><h3>'.$photo->getTitle().'</h3></div>'."\n";
-							$size = $this->getPreferredSize();
-							if(empty($size))
-								$size = null;
-						$html .= '<div class="flickr_photo"><a href="'.$photo->buildUrl().'"><img src="'.$photo->buildImgUrl($size).'"></a></div>'."\n";
+						{
+							$title = $photo->getTitle();
+							if (!empty ($title))
+							{
+								$html .= '<div class="flickr_title"><h3>'.$photo->getTitle().'</h3></div>'."\n";
+								$size = $this->getPreferredSize();
+								if (empty ($size))
+									$size = null;
+								$html .= '<div class="flickr_photo"><a href="'.$photo->buildUrl().'"><img src="'.$photo->buildImgUrl($size).'"></a></div>'."\n";
+							}
+						}
 						if ($this->shouldDisplayTags())
 						{
 							$tags = $photo->getTags();
@@ -631,6 +637,8 @@ if (defined('PHLICKR_SUPPORT') && PHLICKR_SUPPORT === true)
 							if (!empty ($description))
 								$html .= '<div class="flickr_description">'.$description.'</div>'."\n";
 						}
+                        $author = new Phlickr_User($this->getFlickrApi(), $photo->getOwnerId());
+                        $html .= '<div class="flickr_description"><a href="'.$author->buildUrl().'">'.$author->getName().'</a></div>'."\n";
 						$html .= '</div>'."\n";
 					}
 				}
