@@ -103,41 +103,47 @@ $html .= "<div id='portal_container'>\n";
 /* Network section */
 $html .= "<div class='portal_network_section'>\n";
 $html .= "<a href='{$hotspot_network_url}'><img class='portal_section_logo' src='{$network_logo_banner_url}' alt='{$hotspot_network_name} logo' border='0'></a>\n";
-$html .= "Content from \"<a href='{$hotspot_network_url}'>{$hotspot_network_name}</a>\"\n";
+$html .= "<span class='portal_section_title'><a href='{$hotspot_network_url}'>{$hotspot_network_name}</a></span>\n";
 $contents = Network :: getCurrentNetwork()->getAllContent();
-foreach ($contents as $content)
+if($contents)
 {
-	$html .= $content->getUserUI();
+    foreach ($contents as $content)
+    {
+    	$html .= $content->getUserUI();
+    }
 }
 $html .= "</div>\n";
 
 /* Node section */
 $html .= "<div class='portal_node_section'>\n";
 $html .= "<img class='portal_section_logo' src='{$hotspot_logo_url}' alt=''>\n";
-$html .= "Content from ";
+$html .= "<span class='portal_section_title'>"._("Content from:")."</span>";
+$contents = $node->getAllContent();
 $node_homepage = $node->getHomePageURL();
 if(!empty($node_homepage))
 {
 	$html .= "<a href='$node_homepage'>";
 }
 $html .= $node->getName();
-
 if(!empty($node_homepage))
 {
 	$html .= "</a>\n";
 }
-$contents = $node->getAllContent();
 foreach ($contents as $content)
 {
 	$html .= $content->getUserUI();
 }
 $html .= "</div>\n";
-
+$html .= "<div style='clear:both;'></div>";
 /* User section */
+//TODO: Add user content support
+/*
+$contents = User::getCurrentUser()->getAllContent();
 $html .= "<div class='portal_user_section'>\n";
 $html .= _("My content")."\n";
 $html .= "</div>\n";
-$html .= "</div>\n"; /* end portal_container */
+$html .= "</div>\n";
+*/
 
 $ui->setMainContent($html);
 $ui->display();
