@@ -1,9 +1,11 @@
+2005-04-25 François Proulx <francois.proulx@gmail.com>
+	* Portal page styling
+	
 2005-04-26 Benoit Grégoire  <bock@step.polymtl.ca>
 	* ContentGroup.php:  Previous fix didn't work.  New fix.
 
 2005-04-26 Benoit Grégoire  <bock@step.polymtl.ca>
 	* ContentGroup.php:  Make bad selection mode eror non-fatal.
-
 2005-04-25 Benoit Grégoire  <bock@step.polymtl.ca>
 	* Fix bug in ContentGroup enumeration
 
